{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 268,
  "lineage": "ce13b3d5-bda6-8bdd-7334-c804cf16f4f2",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:924144197303:loadbalancer/app/alb-dns-tk-01-test/e8dd194ecea39846",
            "arn_suffix": "app/alb-dns-tk-01-test/e8dd194ecea39846",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-alb-dns-tk-01-test-702265376.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:924144197303:loadbalancer/app/alb-dns-tk-01-test/e8dd194ecea39846",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-dns-tk-01-test",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06ebe7380d56a1a10"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0061f43287fedd958"
              },
              {
                "subnet_id": "subnet-0a25f879c1a5c7184"
              }
            ],
            "subnets": [
              "subnet-0061f43287fedd958",
              "subnet-0a25f879c1a5c7184"
            ],
            "tags": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test",
              "Repository": "https://github.com/clouddrove/terraform-aws-alb"
            },
            "tags_all": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test",
              "Repository": "https://github.com/clouddrove/terraform-aws-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-08eb31d21dd062e62",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:924144197303:listener/app/alb-dns-tk-01-test/e8dd194ecea39846/e302c3624923b731",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:924144197303:listener/app/alb-dns-tk-01-test/e8dd194ecea39846/e302c3624923b731",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:924144197303:loadbalancer/app/alb-dns-tk-01-test/e8dd194ecea39846",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.default",
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:924144197303:listener/app/alb-dns-tk-01-test/e8dd194ecea39846/27ac1ffa3b528275",
            "certificate_arn": "arn:aws:acm:eu-west-1:924144197303:certificate/930dff21-e25b-4875-922c-c73f93c8ab19",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:924144197303:targetgroup/alb-dns-tk-01-test-0/b7492a387570f031",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:924144197303:listener/app/alb-dns-tk-01-test/e8dd194ecea39846/27ac1ffa3b528275",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:924144197303:loadbalancer/app/alb-dns-tk-01-test/e8dd194ecea39846",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "certificate_arn"
              }
            ]
          ],
          "dependencies": [
            "module.acm.aws_acm_certificate.cert",
            "module.acm.aws_acm_certificate.import-cert",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.alb.aws_security_group.default",
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nhttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nhttps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "http_tcp_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "https_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:924144197303:targetgroup/alb-dns-tk-01-test-0/b7492a387570f031",
            "arn_suffix": "targetgroup/alb-dns-tk-01-test-0/b7492a387570f031",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:924144197303:targetgroup/alb-dns-tk-01-test-0/b7492a387570f031",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:924144197303:loadbalancer/app/alb-dns-tk-01-test/e8dd194ecea39846"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-dns-tk-01-test-0",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08eb31d21dd062e62"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nattachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924144197303:security-group/sg-06ebe7380d56a1a10",
            "description": "Instance default security group (only egress access is allowed).",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Description of the rule.",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ebe7380d56a1a10",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Description of the ingress rule use elasticache.",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "alb-dns-tk-01-test-sg",
            "name_prefix": "",
            "owner_id": "924144197303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test",
              "Repository": "https://github.com/clouddrove/terraform-aws-alb"
            },
            "tags_all": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test",
              "Repository": "https://github.com/clouddrove/terraform-aws-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-08eb31d21dd062e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Description of the rule.",
            "from_port": 0,
            "id": "sgrule-1550502",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06ebe7380d56a1a10",
            "security_group_rule_id": "sgr-02d82409cdff71875",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Description of the rule.",
            "from_port": 0,
            "id": "sgrule-3027774302",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06ebe7380d56a1a10",
            "security_group_rule_id": "sgr-07e2b1f56884040d9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.16.0.0/16"
            ],
            "description": "Description of the ingress rule use elasticache.",
            "from_port": 3306,
            "id": "sgrule-3005439874",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06ebe7380d56a1a10",
            "security_group_rule_id": "sgr-08749d7b5fd222ae6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924144197303:security-group/sg-029fb5572b2626d94",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-029fb5572b2626d94",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "924144197303",
            "revoke_rules_on_delete": null,
            "tags": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-default-sg",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            },
            "tags_all": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-default-sg",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-08eb31d21dd062e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924144197303:network-acl/acl-0ac2a9f54ab20f05f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ac2a9f54ab20f05f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "924144197303",
            "subnet_ids": [
              "subnet-0061f43287fedd958",
              "subnet-0a25f879c1a5c7184"
            ],
            "tags": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-public",
              "Repository": "https://github.com/clouddrove/terraform-aws-subnet",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-public",
              "Repository": "https://github.com/clouddrove/terraform-aws-subnet",
              "Type": "public"
            },
            "vpc_id": "vpc-08eb31d21dd062e62"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-941325845",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ac2a9f54ab20f05f",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnets.aws_network_acl.public",
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3285274909",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0ac2a9f54ab20f05f",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnets.aws_network_acl.public",
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c4424fe67e73fd2d",
            "id": "r-rtb-0f6fc0a635d09e1941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6fc0a635d09e194",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "gateway_id"
              }
            ]
          ],
          "dependencies": [
            "module.public_subnets.aws_route_table.public",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c4424fe67e73fd2d",
            "id": "r-rtb-056e9e395b8200e5a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056e9e395b8200e5a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "gateway_id"
              }
            ]
          ],
          "dependencies": [
            "module.public_subnets.aws_route_table.public",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c4424fe67e73fd2d",
            "id": "r-rtb-0f6fc0a635d09e1942750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6fc0a635d09e194",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "gateway_id"
              }
            ]
          ],
          "dependencies": [
            "module.public_subnets.aws_route_table.public",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c4424fe67e73fd2d",
            "id": "r-rtb-056e9e395b8200e5a2750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056e9e395b8200e5a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "gateway_id"
              }
            ]
          ],
          "dependencies": [
            "module.public_subnets.aws_route_table.public",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924144197303:route-table/rtb-0f6fc0a635d09e194",
            "id": "rtb-0f6fc0a635d09e194",
            "owner_id": "924144197303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4424fe67e73fd2d",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4424fe67e73fd2d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AZ": "eu-west-1b",
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-public-eu-west-1b-rt",
              "Repository": "https://github.com/clouddrove/terraform-aws-subnet",
              "Type": "public"
            },
            "tags_all": {
              "AZ": "eu-west-1b",
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-public-eu-west-1b-rt",
              "Repository": "https://github.com/clouddrove/terraform-aws-subnet",
              "Type": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08eb31d21dd062e62"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924144197303:route-table/rtb-056e9e395b8200e5a",
            "id": "rtb-056e9e395b8200e5a",
            "owner_id": "924144197303",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4424fe67e73fd2d",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4424fe67e73fd2d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AZ": "eu-west-1c",
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-public-eu-west-1c-rt",
              "Repository": "https://github.com/clouddrove/terraform-aws-subnet",
              "Type": "public"
            },
            "tags_all": {
              "AZ": "eu-west-1c",
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-public-eu-west-1c-rt",
              "Repository": "https://github.com/clouddrove/terraform-aws-subnet",
              "Type": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08eb31d21dd062e62"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0418cbfda1a9a9f89",
            "route_table_id": "rtb-0f6fc0a635d09e194",
            "subnet_id": "subnet-0061f43287fedd958"
          },
          "dependencies": [
            "module.public_subnets.aws_route_table.public",
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3185d53f0404c6b",
            "route_table_id": "rtb-056e9e395b8200e5a",
            "subnet_id": "subnet-0a25f879c1a5c7184"
          },
          "dependencies": [
            "module.public_subnets.aws_route_table.public",
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924144197303:subnet/subnet-0061f43287fedd958",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0061f43287fedd958",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924144197303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "eu-west-1b",
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-public-eu-west-1b",
              "Repository": "https://github.com/clouddrove/terraform-aws-subnet",
              "Type": "public"
            },
            "tags_all": {
              "AZ": "eu-west-1b",
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-public-eu-west-1b",
              "Repository": "https://github.com/clouddrove/terraform-aws-subnet",
              "Type": "public"
            },
            "vpc_id": "vpc-08eb31d21dd062e62"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924144197303:subnet/subnet-0a25f879c1a5c7184",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.16.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a25f879c1a5c7184",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924144197303",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "eu-west-1c",
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-public-eu-west-1c",
              "Repository": "https://github.com/clouddrove/terraform-aws-subnet",
              "Type": "public"
            },
            "tags_all": {
              "AZ": "eu-west-1c",
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-public-eu-west-1c",
              "Repository": "https://github.com/clouddrove/terraform-aws-subnet",
              "Type": "public"
            },
            "vpc_id": "vpc-08eb31d21dd062e62"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924144197303:network-acl/acl-05a53d0c6aad46613",
            "default_network_acl_id": "acl-05a53d0c6aad46613",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05a53d0c6aad46613",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "924144197303",
            "subnet_ids": [],
            "tags": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-nacl",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            },
            "tags_all": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-nacl",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            },
            "vpc_id": "vpc-08eb31d21dd062e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924144197303:route-table/rtb-005569e922440d23a",
            "default_route_table_id": "rtb-005569e922440d23a",
            "id": "rtb-005569e922440d23a",
            "owner_id": "924144197303",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-default-rt",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            },
            "tags_all": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-default-rt",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-08eb31d21dd062e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924144197303:security-group/sg-029fb5572b2626d94",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-029fb5572b2626d94",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "924144197303",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-default-sg",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            },
            "tags_all": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-default-sg",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            },
            "vpc_id": "vpc-08eb31d21dd062e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0d946fa4646f17327",
            "tags": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            },
            "tags_all": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            },
            "vpc_id": "vpc-08eb31d21dd062e62"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924144197303:internet-gateway/igw-0c4424fe67e73fd2d",
            "id": "igw-0c4424fe67e73fd2d",
            "owner_id": "924144197303",
            "tags": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-igw",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            },
            "tags_all": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test-igw",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            },
            "vpc_id": "vpc-08eb31d21dd062e62"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924144197303:vpc/vpc-08eb31d21dd062e62",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-05a53d0c6aad46613",
            "default_route_table_id": "rtb-005569e922440d23a",
            "default_security_group_id": "sg-029fb5572b2626d94",
            "dhcp_options_id": "dopt-03a078809f7439648",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08eb31d21dd062e62",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0a7c4decdfb3ebb76",
            "ipv6_cidr_block": "2a05:d018:475:5100::/56",
            "ipv6_cidr_block_network_border_group": "eu-west-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005569e922440d23a",
            "owner_id": "924144197303",
            "tags": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            },
            "tags_all": {
              "Environment": "test",
              "Managedby": "hello@clouddrove.com",
              "Name": "alb-dns-tk-01-test",
              "Repository": "https://github.com/clouddrove/terraform-aws-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}